# brew-mgt

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  claude-progress.md  clean-state-checklist.md  evaluator-rubric.md  feature_list.json  init.sh  quality-document.md  session-handoff.md
crates/harness-cli/: Cargo.toml
crates/harness-cli/src/: main.rs
docs/: ARCHITECTURE.md  DESIGN.md  FEATURE_INTAKE.md  HARNESS.md  HARNESS_BACKLOG.md  PLANS.md  PRODUCT_SENSE.md  RELIABILITY.md  SECURITY.md  TEST_MATRIX.md  TRACE_SPEC.md
docs/decisions/: 0001-brew-execution-boundary.md  README.md
docs/design-docs/: core-beliefs.md  index.md
docs/diagrams/: README.md  harness-artifacts.puml  harness-flow.puml
docs/exec-plans/: tech-debt-tracker.md
docs/exec-plans/active/: README.md
docs/exec-plans/completed/: README.md
docs/product/: PRODUCT.md  README.md  api-contract.md  domain-model.md
docs/product-specs/: index.md
docs/references/: README.md  brew-json-reference.md
docs/stories/: README.md  US-001-list-installed.md  US-002-detect-outdated.md  US-005-upgrade-package.md
docs/templates/: decision.md  exec-plan.md  spec.md  story.md  validation.md
scripts/: README.md  build-cli.sh  install-hooks.sh
scripts/hooks/: pre-commit
scripts/schema/: 0001_init.sql  0002_features.sql
sops/: README.md  encode-unseen-knowledge.md  layered-domain-architecture.md  local-observability-loop.md
