[package]
name = "harness-cli"
version = "0.1.0"
edition = "2021"
description = "Durable operational layer for the brew-mgt harness."
license = "MIT"

[[bin]]
name = "harness-cli"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
rusqlite = { version = "0.31", features = ["bundled"] }
anyhow = "1.0"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
serde_json = "1.0"
